--- a/Aboutme/aboutme.html
+++ b/Aboutme/aboutme.html
@@ -82,7 +82,7 @@
                         <li class="experience"><b>English:</b> Advanced</li>
                     </ul>
                     <div class="cv_input-container">
-                        <form action="../CV.pdf" target="_blank">
+                        <form action="../RESUME.pdf" target="_blank">
                             <input type="submit" value="MY CV">
                         </form>
                     </div>                    
