--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             </p>
                         </div>
                         <div class="cv_input-container">
-                            <form action="CV.pdf" target="_blank">
+                            <form action="RESUME.pdf" target="_blank">
                                 <input type="submit" value="MY CV">
                             </form>
                         </div>
