--- a/Illustrations/illustrations.html
+++ b/Illustrations/illustrations.html
@@ -155,11 +155,12 @@
             <div class="more-item"><a class="more-link" href="#more9"><img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihZCYG44ewSJZvpIn0cmZ-YkNnahY2-4tHYbr1gQ3zA9l1fSiMyFXeLrIYroWN6ahoqN3U_Io8a7xfPM4XiM21ocwPqeGRIpBjA=s1600-rw-v1" alt=""></a></div>
             <div class="more-item"><a class="more-link" href="#more10"><img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihaS98FUfIrInjUe4aeDJ0x3dBvsUWiGDX3zVGSm6JKpJ4DEDPf1RQ84LgS0WQIYYqpIMTYOC9gc471xoeEUaMJ3_c7ziVRzsA=s1600-rw-v1" alt=""></a></div>
             <div class="more-item"><a class="more-link" href="#more11"><img src="https://lh3.googleusercontent.com/drive-viewer/AKGpiha36wjp_W5LZ04XmjqagRFcqXUug40wbniirEXNkd1vni68aqFIaK51MaNhqcaVa_mv2RkYcYu3tgoY0bWyZMv_qu9yOaddcVY=s1600-rw-v1" alt=""></a></div>
-            <div class="more-item"><a class="more-link" href="#more12"><img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihYhbeW4YV3GhXCCs8TdtyER4h0PMVitrIf_GmDmKvNtQIcmkqId5dAwuhlJodZpJujrZvsnlS9GR2ZblP5MFLb5peSNZYTPb1M=s1600-rw-v1" alt=""></a></div>   
+            <div class="more-item"><a class="more-link" href="#more12"><img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihYhbeW4YV3GhXCCs8TdtyER4h0PMVitrIf_GmDmKvNtQIcmkqId5dAwuhlJodZpJujrZvsnlS9GR2ZblP5MFLb5peSNZYTPb1M=s1600-rw-v1" alt=""></a></div>
+            <div class="more-item"><a class="more-link" href="#more13"><img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihbxkag6tm8IUczxqCQnjfMGk9Dixv_daLC26D3-vJzGx0LBZgsl2yswdqDvLq8VA01UatUKRp2QYDgedNkU7RAB6QxGYEovnks=s1600-rw-v1" alt=""></a></div>    
         </div>
 
         <article class="light-box" id="more1">
-            <a href="#more12" class="previous"><img src="../Icons/L-arrow.png" alt="" class="iconos"></a>
+            <a href="#more13" class="previous"><img src="../Icons/L-arrow.png" alt="" class="iconos"></a>
             <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihYyJ1nRj4BVAACT2W74X1kn7E0YzV8zv8I5dhDBAJSXbT-Sy9F3ekEOw3b13FmQjTohXsSSqBsXhgcBp7iW21NuN6EG-INTmcw=s2560" alt="" class="illu-ventana">
             <a href="#more2" class="next"> <img src="../Icons/R-arrow.png" alt="" class="iconos"></a>
             <a href="#" class="close"><img src="../Icons/close.png" alt="" class="iconos"></i></a>
@@ -227,6 +228,12 @@
         <article class="light-box" id="more12">
             <a href="#more11" class="previous"><img src="../Icons/L-arrow.png" alt="" class="iconos"></a>
             <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihYhbeW4YV3GhXCCs8TdtyER4h0PMVitrIf_GmDmKvNtQIcmkqId5dAwuhlJodZpJujrZvsnlS9GR2ZblP5MFLb5peSNZYTPb1M=s1600-rw-v1" alt="" class="illu-ventana">
+            <a href="#more13" class="next"> <img src="../Icons/R-arrow.png" alt="" class="iconos"></a>
+            <a href="#" class="close"><img src="../Icons/close.png" alt="" class="iconos"></i></a>
+        </article>
+        <article class="light-box" id="more13">
+            <a href="#more12" class="previous"><img src="../Icons/L-arrow.png" alt="" class="iconos"></a>
+            <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihbxkag6tm8IUczxqCQnjfMGk9Dixv_daLC26D3-vJzGx0LBZgsl2yswdqDvLq8VA01UatUKRp2QYDgedNkU7RAB6QxGYEovnks=s1600-rw-v1" alt="" class="illu-ventana">
             <a href="#more1" class="next"> <img src="../Icons/R-arrow.png" alt="" class="iconos"></a>
             <a href="#" class="close"><img src="../Icons/close.png" alt="" class="iconos"></i></a>
         </article>
