--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 <div class="img-port">
                     <a href="Illustrations/illustrations.html">
                         <h3>Illustrations</h3>
-                        <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihZgBj6KZhoWwSGoUXe4nGqFtVyeUZb_13m0yOJAKFLAkRvLGhc-8_TBLLrHZCtwBdqiSnHVSjJKeG6SRYYtPjRgJe2kMN__FOI=s1600-rw-v1" alt="">
+                        <img src="https://drive.google.com/uc?export=download&id=1v_c41K-_8UP5cO3apjHRJoPkK5pHd42I" alt="Descripción de la imagen">
+
                         <div class="hover-galeria">
                             <p>See more</p>
                         </div>
