--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                 <div class="img-port">
                     <a href="Illustrations/illustrations.html">
                         <h3>Illustrations</h3>
-                        <img src="https://drive.google.com/uc?export=download&id=1v_c41K-_8UP5cO3apjHRJoPkK5pHd42I" alt="Descripción de la imagen">
-
+                        <iframe src="https://drive.google.com/file/d/1v_c41K-_8UP5cO3apjHRJoPkK5pHd42I/preview" width="640" height="480" ></iframe>
                         <div class="hover-galeria">
                             <p>See more</p>
                         </div>
@@ -107,7 +106,7 @@
                 <div class="img-port">
                     <a href="2Danimation/2Danimation.html">
                         <h3>2D Animation</h3>
-                        <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihYLASqgldNLrvxUsOODAquhtRmxrvjy5wOuqJjr4Dj9c0iX8Iu_kmL2NsGW2JHRDhBCV0ONpUzktx7ogwFp3draaJHhB3Fqvw=s1600-rw-v1" alt="">
+                        <iframe src="https://drive.google.com/file/d/1H6CMJm6v-naZ3li6rMjKwIwfNAd1YPOf/preview" width="640" height="480" ></iframe>
                         <div class="hover-galeria">
                             <p>See more</p>
                         </div>
