--- a/WebProjects/WebProjects.html
+++ b/WebProjects/WebProjects.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D ANIMATION || JUANART</title>
+    <title>WEB PROJECTS || JUANART</title>
     <link rel="shortcut icon" href="../icono.png" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="estilos.css">
+<link rel="stylesheet" href="WebProjects.css">
 </head>
 <body>
     <nav class="nav-bar">
@@ -21,7 +21,7 @@
         <ul class="nav-items">
             <li class="nav-item"><a href="../index.html" class="nav_item-link">Home</a></li>
             <li class="nav-item" ><a href="../Aboutme/aboutme.html" class="nav_item-link">About me</a></li>
-            <li class="nav-item"><a href="WebProjects/WebProjects.html" class="nav_item-link">Web Development</a></li>
+            <li class="nav-item"><a href="#" class="nav_item-link">Web Development</a></li>
             <li class="nav-item">
                 <div class="nav_item-link">Digital Art</div>
                 <ul class="vertical-menu">
@@ -45,30 +45,16 @@
             <div class="line"></div>
         </label>
     </nav>
-    <div class="animations-tittle">
-        <h2>3D ANIMATION</h2>
+    <div class="models">
+        <h2>WEB PROJECTS</h2>
     </div>
-    <section class="Animations">
-        <div class="animation-epifanio">
-            <p style="text-align: center;">
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/1I3AifRYjK4?si=H85usE95LV22ERxf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </p>          
+    <section class="Modeling">
+        <div class="galeria-models">
+            <div class="models-item"><a class="models-link" href="https://juanart1811.github.io/WebProyect-Shoppage/" target="_blank"><div class="bloque">Shop page</div></a></div>
+            <div class="models-item"><a class="models-link" href="https://juanart1811.github.io/WebProyect-learning-page/" target="_blank"><div class="bloque">Learning page</div></a></div>
+            
         </div>
 
-        <div class="animations-tittle">
-            <h2>ANIMATIONS FOR A FIGHTING GAME</h2>
-        </div>
-
-        <div class="galeria-fight-animations">
-            <div class="animation-item"><video controls loop autoplay muted src="Animations/Idle.mp4">oops... something is wrong</video></div>
-            <div class="animation-item"><video controls loop autoplay muted src="Animations/Break.mp4">oops... something is wrong</video></div>
-            <div class="animation-item"><video controls loop autoplay muted src="Animations/Run.mp4">oops... something is wrong</video></div>
-            <div class="animation-item"><video controls loop autoplay muted src="Animations/Walk.mp4">oops... something is wrong</video></div>
-            <div class="animation-item"><video controls loop autoplay muted src="Animations/Ligero.mp4">oops... something is wrong</video></div>
-            <div class="animation-item"><video controls loop autoplay muted src="Animations/Mediano.mp4">oops... something is wrong</video></div>
-            <div class="animation-item"><video controls loop autoplay muted src="Animations/Fuerte.mp4">oops... something is wrong</video></div>
-            <div class="animation-item"><video controls loop autoplay muted src="Animations/Combo.mp4">oops... something is wrong</video></div>
-        </div>
     <footer>
         <div class="footer-container">
             <p class="footer-message">&copy; 2024 Juan Esteban Alzate (JuanArt).<strong>All rights reserved.</strong></p>
