--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="nav-items">
             <li class="nav-item"><a href="#" class="nav_item-link">Home</a></li>
             <li class="nav-item" ><a href="Aboutme/aboutme.html" class="nav_item-link">About me</a></li>
-            <li class="nav-item"><a href="#" class="nav_item-link">Web Development</a></li>
+            <li class="nav-item"><a href="WebProjects/WebProjects.html" class="nav_item-link">Web Development</a></li>
             <li class="nav-item">
                 <a href="#" class="nav_item-link">Digital Art</a>
                 <ul class="vertical-menu">
@@ -59,9 +59,9 @@
                 <h2 class="portfolio-tittle">My projects</h2>
             <div class="galeria-port">
                 <div class="img-port">
-                    <a href="#">
+                    <a href="WebProjects/WebProjects.html">
                         <h3>Web Projects</h3>
-                    <img src="Proyectos/Web.jpg" alt="">
+                    <img src="web-development.jpg" alt="">
                     <div class="hover-galeria">
                         <p>See more</p>
                     </div>
