--- a/Aboutme/aboutme.html
+++ b/Aboutme/aboutme.html
@@ -21,7 +21,7 @@
         <ul class="nav-items">
             <li class="nav-item"><a href="../index.html" class="nav_item-link">Home</a></li>
             <li class="nav-item" ><a href="../Aboutme/aboutme.html" class="nav_item-link">About me</a></li>
-            <li class="nav-item"><a href="#" class="nav_item-link">Web Development</a></li>
+            <li class="nav-item"><a href="WebProjects/WebProjects.html" class="nav_item-link">Web Development</a></li>
             <li class="nav-item">
                 <div class="nav_item-link">Digital Art</div>
                 <ul class="vertical-menu">
